src/tests/fixtures/field_definitions/ReferenceNonGraphQLType.ts.expected
-----------------
INPUT
----------------- 
type SomeUndefienedType = string;

/** @GQLType */
class Query {
  /** @GQLField */
  somePropertyField: SomeUndefienedType;
}

-----------------
OUTPUT
-----------------
Error: This type is not a valid GraphQL type. Did you mean to annotate it's definition with `/** @GQLType */` or `/** @GQLScalar */`?:
 --> src/tests/fixtures/field_definitions/ReferenceNonGraphQLType.ts:6:22

  |   /** @GQLField */
6 |   somePropertyField: SomeUndefienedType;
  |                      ^^^^^^^^^^^^^^^^^^ 
  | }
