src/tests/fixtures/field_definitions/ReferenceNonGraphQLType.ts
type SomeUndefienedType = string;

/** @GQLType */
class Query {
  /** @GQLField */
  somePropertyField: SomeUndefienedType;
}
